system/ingress/flux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
spec:
  tls:
  - secretName: poshcode-tls
    hosts:
    - poshcode.com
  rules:
  - host: poshcode.com
    http:
      paths:
      - path: /flux
        pathType: Prefix
        backend:
          service:
            name: notification-controller
            port:
              name: http
